--- a/upi-checkout.html
+++ b/upi-checkout.html
@@ -6,23 +6,160 @@
 <title>Gamored — UPI Checkout</title>
 <link rel="icon" href="favicon.ico">
 <style>
-:root{--accent:#16a34a;--border:#d1d5db;}
+:root{
+  --bg-main:#05070c;
+  --bg-panel:#0b1c2d;
+  --bg-soft:#081a2e;
+  --accent:#00c6ff;
+  --accent-2:#0072ff;
+  --text-main:#e8f2ff;
+  --text-muted:#9fdcff;
+  --border-glow:rgba(0,170,255,0.35);
+}
+
 *{box-sizing:border-box}
-body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;background:#fff;color:#111827;line-height:1.4}
-.nav{display:flex;justify-content:space-between;align-items:center;padding:14px 5%;background:#0a0f0a;color:#fff}
-.nav a{color:#fff;text-decoration:none;margin:0 12px;font-weight:600}
-.checkout-card{max-width:720px;margin:24px auto;padding:20px;border-radius:16px;background:#f9fafb}
-.card{padding:12px 16px;border:1px solid var(--border);border-radius:12px;margin-bottom:16px}
-form label{display:block;margin-top:10px;font-weight:600}
-form input,form select{width:100%;padding:10px;border:1px solid var(--border);border-radius:10px;margin-top:6px}
-.grid-2{display:grid;gap:12px;grid-template-columns:repeat(2,minmax(0,1fr))}
-@media(max-width:640px){.grid-2{grid-template-columns:1fr}}
-.btn-primary{margin-top:16px;padding:12px 16px;border:0;border-radius:12px;cursor:pointer;font-weight:700;background:var(--accent);color:#fff}
-.toast{margin-top:12px;padding:10px;border-radius:10px}
-.qr{display:flex;justify-content:center;margin:12px 0}
-.qr img{width:160px;height:160px;border-radius:12px}
-.err{background:#fdeaea;border:1px solid #f1b1b1}
-.ok{background:#e7f6e7;border:1px solid #b6e2b6}
+
+body{
+  margin:0;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;
+  background:linear-gradient(#05070c,#081a2e);
+  color:var(--text-main);
+  line-height:1.5;
+}
+
+/* ===== NAV ===== */
+.nav{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:18px 6%;
+  background:#0b1c2d;
+  box-shadow:0 6px 20px rgba(0,0,0,.4);
+}
+
+.nav a{
+  color:var(--text-main);
+  text-decoration:none;
+  margin:0 14px;
+  font-weight:600;
+}
+
+.nav a:hover{
+  color:var(--accent);
+}
+
+/* ===== CARD ===== */
+.checkout-card{
+  max-width:780px;
+  margin:60px auto;
+  padding:36px;
+  background:linear-gradient(135deg,var(--bg-panel),var(--bg-soft));
+  border-radius:22px;
+  box-shadow:0 0 40px rgba(0,170,255,.25);
+}
+
+.checkout-card h2{
+  color:var(--text-muted);
+  margin-top:0;
+}
+
+/* ===== SECTIONS ===== */
+.card{
+  padding:20px 24px;
+  border-radius:16px;
+  background:rgba(10,30,60,.7);
+  border:1px solid var(--border-glow);
+  margin-bottom:24px;
+}
+
+h3{
+  color:var(--text-muted);
+  margin-top:0;
+}
+
+/* ===== QR ===== */
+.qr{
+  display:flex;
+  justify-content:center;
+  margin:24px 0;
+}
+
+.qr img{
+  width:180px;
+  height:180px;
+  padding:10px;
+  border-radius:16px;
+  background:#ffffff;
+}
+
+/* ===== FORM ===== */
+label{
+  display:block;
+  margin-top:14px;
+  font-weight:600;
+  color:var(--text-muted);
+}
+
+input,
+select{
+  width:100%;
+  padding:12px;
+  margin-top:6px;
+  border-radius:12px;
+  border:1px solid var(--border-glow);
+  background:#0b1c2d;
+  color:var(--text-main);
+}
+
+input::placeholder{
+  color:#7fbfff;
+}
+
+.grid-2{
+  display:grid;
+  gap:14px;
+  grid-template-columns:repeat(2,1fr);
+}
+
+@media(max-width:640px){
+  .grid-2{grid-template-columns:1fr}
+}
+
+/* ===== BUTTON ===== */
+.btn-primary{
+  margin-top:30px;
+  padding:16px 38px;
+  background:linear-gradient(135deg,var(--accent),var(--accent-2));
+  color:#00121f;
+  border:none;
+  border-radius:16px;
+  cursor:pointer;
+  font-weight:700;
+  font-size:16px;
+}
+
+.btn-primary:hover{
+  filter:brightness(1.1);
+}
+
+/* ===== TOAST ===== */
+.toast{
+  margin-top:18px;
+  padding:14px 18px;
+  border-radius:12px;
+  font-weight:600;
+}
+
+.ok{
+  background:rgba(0,255,160,.15);
+  border:1px solid rgba(0,255,160,.4);
+}
+
+.err{
+  background:rgba(255,80,80,.15);
+  border:1px solid rgba(255,80,80,.4);
+}
+
 </style>
 </head>
 <body>
