--- a/upi-checkout.html
+++ b/upi-checkout.html
@@ -231,78 +231,104 @@ input::placeholder{
 <script>
 (function(){
   try{
-    const cart=JSON.parse(localStorage.getItem('cart')||'[]');
-    const amount=cart.reduce((s,i)=>s+(i.price||0)*(i.qty||1),0);
-    document.getElementById('amountValue').textContent=amount.toFixed(2);
-    document.getElementById('itemCount').textContent=cart.length;
-    document.getElementById('orderAmount').value=amount.toFixed(2);
-    document.getElementById('orderItemsJson').value=JSON.stringify(cart);
-    document.getElementById('orderId').value='GAMO-'+Date.now();
-    const base=`upi://pay?pa=7042630996@fam&pn=Gamored&cu=INR&am=${amount.toFixed(2)}`;
-    const qr=document.getElementById('upiQR');
-    const link=document.getElementById('upiLink');
-    qr.src=`https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=${encodeURIComponent(base)}`;
-    link.href=base;
-  }catch(e){}
+    const cart = JSON.parse(localStorage.getItem('cart') || '[]');
+    const amount = cart.reduce((s,i)=>s+(i.price||0)*(i.qty||1),0);
+
+    document.getElementById('amountValue').textContent = amount.toFixed(2);
+    document.getElementById('itemCount').textContent = cart.length;
+    document.getElementById('orderAmount').value = amount.toFixed(2);
+    document.getElementById('orderItemsJson').value = JSON.stringify(cart);
+    document.getElementById('orderId').value = 'GAMO-' + Date.now();
+
+    const base = `upi://pay?pa=7042630996@fam&pn=Gamored&cu=INR&am=${amount.toFixed(2)}`;
+    const qr = document.getElementById('upiQR');
+    const link = document.getElementById('upiLink');
+
+    qr.src = `https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=${encodeURIComponent(base)}`;
+    link.href = base;
+  } catch(e){}
 })();
 
-const shotInput=document.getElementById('screenshot');
-const shotPreview=document.getElementById('shotPreview');
-shotInput.addEventListener('change',()=>{
-  shotPreview.innerHTML='';
-  const file=shotInput.files&&shotInput.files[0];
-  if(!file)return;
-  if(file.size>10*1024*1024){alert('File too large');shotInput.value='';return;}
-  const img=document.createElement('img');
-  img.style.maxWidth='220px';img.style.borderRadius='8px';img.src=URL.createObjectURL(file);
+/* ===== Screenshot preview ===== */
+const shotInput = document.getElementById('screenshot');
+const shotPreview = document.getElementById('shotPreview');
+
+shotInput.addEventListener('change', () => {
+  shotPreview.innerHTML = '';
+  const file = shotInput.files && shotInput.files[0];
+  if (!file) return;
+
+  if (file.size > 10 * 1024 * 1024) {
+    alert('File too large');
+    shotInput.value = '';
+    return;
+  }
+
+  const img = document.createElement('img');
+  img.style.maxWidth = '220px';
+  img.style.borderRadius = '8px';
+  img.src = URL.createObjectURL(file);
   shotPreview.appendChild(img);
 });
 
-// File -> base64 (no custom headers; we still submit via FormData)
-const fileToBase64=(file)=>new Promise((resolve,reject)=>{
-  const r=new FileReader();
-  r.onload=()=>resolve(String(r.result).split(',')[1]);
-  r.onerror=reject;
+/* ===== File → base64 ===== */
+const fileToBase64 = (file) => new Promise((resolve, reject) => {
+  const r = new FileReader();
+  r.onload = () => resolve(String(r.result).split(',')[1]);
+  r.onerror = reject;
   r.readAsDataURL(file);
 });
 
-const GAS_URL='https://script.google.com/macros/s/AKfycbyILp17k86wL1zw2deDcb2QoBWGkjFZYKSigC5jGm8GDpJh1b1F_gtWIsKSBcZTIhlXgw/exec';
+const GAS_URL = 'https://script.google.com/macros/s/AKfycbyILp17k86wL1zw2deDcb2QoBWGkjFZYKSigC5jGm8GDpJh1b1F_gtWIsKSBcZTIhlXgw/exec';
 
-document.getElementById('upiCheckoutForm').addEventListener('submit',async e=>{
+/* ===== Form submit ===== */
+document.getElementById('upiCheckoutForm').addEventListener('submit', async e => {
   e.preventDefault();
-  const btn=document.getElementById('sendBtn');
-  const msg=document.getElementById('formMsg');
-  btn.disabled=true;btn.textContent='Sending...';msg.style.display='none';msg.className='toast';
+
+  const btn = document.getElementById('sendBtn');
+  const msg = document.getElementById('formMsg');
+
+  btn.disabled = true;
+  btn.textContent = 'Sending...';
+  msg.style.display = 'none';
+  msg.className = 'toast';
 
   try{
-    const file=shotInput.files&&shotInput.files[0];
-    if(!file) throw new Error('Attach a screenshot.');
+    const file = shotInput.files && shotInput.files[0];
+    if (!file) throw new Error('Attach a screenshot.');
 
-    const b64=await fileToBase64(file);
+    const b64 = await fileToBase64(file);
 
-    const formEl=e.target;
-    const fd=new FormData(formEl);
-    fd.delete('screenshot'); // we’ll send base64 fields instead
+    const formEl = e.target;
+    const fd = new FormData(formEl);
+    fd.delete('screenshot');
     fd.append('screenshot_b64', b64);
     fd.append('screenshot_name', file.name || 'payment.png');
     fd.append('screenshot_type', file.type || 'image/png');
 
-    const res=await fetch(GAS_URL,{ method:'POST', body: fd });
-    const text=await res.text();
-    if(!res.ok) throw new Error(`HTTP ${res.status}: ${text.slice(0,200)}`);
-    let data; try{ data=JSON.parse(text) }catch{ data={message:text} }
+    const res = await fetch(GAS_URL, { method:'POST', body: fd });
+    const text = await res.text();
+    if (!res.ok) throw new Error(`HTTP ${res.status}: ${text.slice(0,200)}`);
 
-    msg.textContent=data.message||'Submitted!';
-    msg.className='toast ok';
-    msg.style.display='block';
-  }catch(err){
-    msg.textContent=`Send failed → ${err.message}`;
-    msg.className='toast err';
-    msg.style.display='block';
-  }finally{
-    btn.disabled=false;btn.textContent='Send';
+    /* ===== SUCCESS ===== */
+    msg.textContent = 'Submitted! We will confirm shortly.';
+    msg.className = 'toast ok';
+    msg.style.display = 'block';
+
+    /* Redirect to success page */
+    setTimeout(() => {
+      window.location.href = 'order-success.html';
+    }, 1800);
+
+  } catch(err){
+    msg.textContent = `Send failed → ${err.message}`;
+    msg.className = 'toast err';
+    msg.style.display = 'block';
+    btn.disabled = false;
+    btn.textContent = 'Send';
   }
 });
 </script>
+
 </body>
 </html>
