--- a/Laptopaccessories.html
+++ b/Laptopaccessories.html
@@ -63,7 +63,7 @@
       <p class="description">Spill-resistant with LIGHTSYNC RGB and dedicated media controls.</p>
       <div class="button-group">
         <button onclick="addToCart('Logitech G213 Prodigy RGB Gaming Keyboard', 3499)">Add to Cart</button>
-        <a href="logitech-g213.html"><button>View</button></a>
+        <a href="g213keyboard.html"><button>View</button></a>
       </div>
     </div>
 
@@ -75,7 +75,7 @@
       <p class="description">Large silk-glide pad (600×300×2 mm) for smooth precision control.</p>
       <div class="button-group">
         <button onclick="addToCart('AD-MP-236 AD-06 Gaming Mouse Pad', 500)">Add to Cart</button>
-        <a href="ad-mp-236.html"><button>View</button></a>
+        <a href="gaming-mousepad.html"><button>View</button></a>
       </div>
     </div>
   </main>
