--- a/laptopstand.html
+++ b/laptopstand.html
@@ -29,15 +29,17 @@
   <!-- PRODUCT PAGE -->
   <div class="product-page">
 
-    <!-- IMAGE GALLERY -->
+
+        <!-- IMAGE GALLERY -->
     <div class="product-gallery">
-<img id="mainProductImage" src="Laptopstand.png" class="main-image">
-      
+      <img id="mainProductImage" src="Laptopstand.png" class="main-image" alt="Laptop stand">
+
       <div class="thumbnail-row">
-<img src="Laptopstand.png" onclick="changeImage(this)">
-<img src="Laptopstand2.png" onclick="changeImage(this)">
+        <img src="Laptopstand.png" onclick="changeImage(this)">
+        <img src="Laptopstand2.png" onclick="changeImage(this)">
       </div>
     </div>
+
 
     <!-- PRODUCT INFO -->
     <div class="product-info">
