--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <p class="description">Large silk-glide pad (600×300×2 mm) for smooth precision control.</p>
       <div class="button-group">
         <button onclick="addToCart('AD-MP-236 AD-06 Gaming Mouse Pad', 500)">Add to Cart</button>
-        <a href="ad-mp-236.html"><button>View</button></a>
+        <a href="gaming-mousepad.html"><button>View</button></a>
       </div>
     </div>
   </div>
