--- a/Connectors.html
+++ b/Connectors.html
@@ -35,7 +35,7 @@
       <p class="description">Compact adapter to connect USB devices with fast data transfer via USB 3.0.</p>
       <div class="button-group">
         <button onclick="addToCart('Type-C to USB 3.0 OTG Converter Adapter', 199)">Add to Cart</button>
-        <a href="typec-usb-otg.html"><button>View</button></a>
+        <a href="typec-to-usb-otg.html"><button>View</button></a>
       </div>
     </div>
 
