--- a/Connectors.html
+++ b/Connectors.html
@@ -46,7 +46,7 @@
       <p class="description">Durable adapter that converts USB 3.0 OTG to Type-C for quick connectivity.</p>
       <div class="button-group">
         <button onclick="addToCart('USB 3.0 OTG to Type-C Converter Adapter', 199)">Add to Cart</button>
-        <a href="usb3-otg-typec.html"><button>View</button></a>
+        <a href="usb-to-typec-otg.html"><button>View</button></a>
       </div>
     </div>
 
