--- a/Connectors.html
+++ b/Connectors.html
@@ -57,7 +57,7 @@
       <p class="description">Compact adapter for charging and data sync — converts Micro USB to Type-C.</p>
       <div class="button-group">
         <button onclick="addToCart('Micro USB Adapter to Type-C (PBCH008)', 99)">Add to Cart</button>
-        <a href="micro-usb-typec.html"><button>View</button></a>
+        <a href="micro-usb-to-typec.html"><button>View</button></a>
       </div>
     </div>
 
