--- a/Connectors.html
+++ b/Connectors.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-  <!-- Navbar -->
   <div class="Po">
-    <img src="openart-image_kz9NAdvh_1752636502377_raw-removebg-preview.png" width="150" alt="Gamored Logo">
-    <a href="index.html"><button>Home</button></a>
+    <img src="openart-image_kz9NAdvh_1752636502377_raw-removebg-preview.png" width="150px">
+    <a href="index.html"><button class="button active">Home</button></a>
     <div class="dropdown">
       <button class="dropbtn">Products</button>
       <div class="dropdown-content">
         <a href="Laptopaccessories.html">Laptop Accessories</a>
-        <a href="Connectors.html" class="active">Connectors</a>
+        <a href="Connectors.html">Connectors</a>
       </div>
+    </div> 
     </div>
     <a href="Contactus.html"><button>Contact Us</button></a>
     <a href="Aboutus.html"><button>About Us</button></a>
