--- a/upi-checkout.html
+++ b/upi-checkout.html
@@ -27,26 +27,7 @@ body{
   line-height:1.5;
 }
 
-/* ===== NAV ===== */
-.nav{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:18px 6%;
-  background:#0b1c2d;
-  box-shadow:0 6px 20px rgba(0,0,0,.4);
-}
 
-.nav a{
-  color:var(--text-main);
-  text-decoration:none;
-  margin:0 14px;
-  font-weight:600;
-}
-
-.nav a:hover{
-  color:var(--accent);
-}
 
 /* ===== CARD ===== */
 .checkout-card{
@@ -163,14 +144,16 @@ input::placeholder{
 </style>
 </head>
 <body>
-<nav class="nav">
-<div class="logo"><a href="index.html">Gamored</a></div>
-<div>
-<a href="index.html">Home</a>
-<a href="Laptopaccessories.html">Products</a>
-<a href="cart.html">Cart</a>
-</div>
-</nav>
+  <div class="Po">
+    <img src="openart-image_kz9NAdvh_1752636502377_raw-removebg-preview.png" width="150px">
+    <a href="index.html"><button class="button active">Home</button></a>
+    <div class="dropdown">
+      <button class="dropbtn">Products</button>
+      <div class="dropdown-content">
+        <a href="Laptopaccessories.html">Laptop Accessories</a>
+        <a href="Connectors.html">Connectors</a>
+      </div>
+    </div> 
 
 <section class="checkout-card">
 <h2>UPI Checkout</h2>
