--- a/upi-checkout.html
+++ b/upi-checkout.html
@@ -144,16 +144,24 @@ input::placeholder{
 </style>
 </head>
 <body>
-  <div class="Po">
-    <img src="openart-image_kz9NAdvh_1752636502377_raw-removebg-preview.png" width="150px">
-    <a href="index.html"><button class="button active">Home</button></a>
-    <div class="dropdown">
-      <button class="dropbtn">Products</button>
-      <div class="dropdown-content">
-        <a href="Laptopaccessories.html">Laptop Accessories</a>
-        <a href="Connectors.html">Connectors</a>
-      </div>
-    </div> 
+<!-- NAVBAR -->
+<div class="Po">
+  <img src="openart-image_kz9NAdvh_1752636502377_raw-removebg-preview.png" width="150px">
+
+  <a href="index.html"><button>Home</button></a>
+
+  <div class="dropdown">
+    <button class="dropbtn">Products</button>
+    <div class="dropdown-content">
+      <a href="Laptopaccessories.html">Laptop Accessories</a>
+      <a href="Connectors.html">Connectors</a>
+    </div>
+  </div>
+
+  <a href="Contactus.html"><button>Contact Us</button></a>
+  <a href="Aboutus.html"><button>About Us</button></a>
+  <a href="cart.html"><button>🛒 Cart</button></a>
+</div>
 
 <section class="checkout-card">
 <h2>UPI Checkout</h2>
