--- a/upi-checkout.html
+++ b/upi-checkout.html
@@ -140,6 +140,17 @@ input::placeholder{
   background:rgba(255,80,80,.15);
   border:1px solid rgba(255,80,80,.4);
 }
+  .Po {
+  width: 100%;
+  min-height: 120px;
+  background-color: rgb(49, 210, 60);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: wrap;
+  padding: 10px;
+}
 
 </style>
 </head>
