--- a/upi-checkout.html
+++ b/upi-checkout.html
@@ -240,7 +240,9 @@ input::placeholder{
 <body>
 <!-- NAVBAR -->
 <div class="Po">
-  <img src="openart-image_kz9NAdvh_1752636502377_raw-removebg-preview.png" width="150px">
+  <img src="openart-image_kz9NAdvh_1752636502377_raw-removebg-preview.png"
+       width="120px"
+       alt="Gamored Logo">
 
   <a href="index.html"><button>Home</button></a>
 
@@ -252,10 +254,11 @@ input::placeholder{
     </div>
   </div>
 
-  <a href="Contactus.html"><button>Contact Us</button></a>
-  <a href="Aboutus.html"><button>About Us</button></a>
+  <a href="Contactus.html"><button>Contact us</button></a>
+  <a href="Aboutus.html"><button>About us</button></a>
   <a href="cart.html"><button>🛒 Cart</button></a>
 </div>
+
 
 <section class="checkout-card">
 <h2>UPI Checkout</h2>
