--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p class="description">High-speed adapter that connects Type-C devices to HDMI displays with sharp video output.</p>
       <div class="button-group">
         <button onclick="addToCart('Type-C to HDMI Video Converter (PBADN097)', 250)">Add to Cart</button>
-        <a href="typec-hdmi.html"><button>View</button></a>
+        <a href="typec-to-hdmi.html"><button>View</button></a>
       </div>
     </div>
     
