--- a/Aboutus.html
+++ b/Aboutus.html
@@ -125,7 +125,7 @@
   <div class="about-hero">
     <div class="about-photo">
       <!-- REPLACE THIS IMAGE WITH YOUR PHOTO -->
-      <img src="your-photo.jpg" alt="Founder of Gamored">
+      <img src="pirateofthecaribbean.jpg" alt="Founder of Gamored">
     </div>
 
     <div class="about-intro">
