--- a/usb-to-typec-otg.html
+++ b/usb-to-typec-otg.html
@@ -31,7 +31,7 @@
     <img id="mainProductImage" src="usb_typec_1.png" class="main-image">
 
     <div class="thumbnail-row">
-      <img src="usb_typec_1.png" onclick="changeImage(this)">
+      <img src="usb3tousbc.png" onclick="changeImage(this)">
       <img src="usb_typec_2.png" onclick="changeImage(this)">
     </div>
   </div>
