--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div> 
     <a href="Contactus.html"><button>Contact us</button></a>
     <a href="Aboutus.html"><button>About us</button></a>
-    <a href="cart.html"><button>🛒 Cart</button></a>
+    <a href="cart.html"><button>Cart</button></a>
   </div>
   <!-- Gamored Banner -->
 <div class="gamored-banner">
