--- a/typec-to-hdmi.html
+++ b/typec-to-hdmi.html
@@ -31,7 +31,7 @@
     <img id="mainProductImage" src="typec_hdmi_1.png" class="main-image">
 
     <div class="thumbnail-row">
-      <img src="typec_hdmi_1.png" onclick="changeImage(this)">
+      <img src="Type-C To HDMI Female MT-ViKi Video Converter.png" onclick="changeImage(this)">
       <img src="typec_hdmi_2.png" onclick="changeImage(this)">
     </div>
   </div>
